# WideSteepPipeline

./: app.py  logging_config.py  pyproject.toml  run.py
static/: script.js  styles.css
templates/: index.html
