[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
quart = "^0.19.6"
hypercorn = "^0.17.3"
aiohttp = "^3.9.5"
requests = "^2.32.3"
marshmallow = "^3.21.3"
pythonista-api-client = "^0.1.4"
utils = "^1.0.2"
config = "^0.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.4.2"
flake8 = "^7.1.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"